# snip721-migratable

./: .gitignore  Cargo.toml  Developing.md  Makefile  README.md
.github/workflows/: Integration.yml  Static.yml
contracts/purchaseable-snip721-v1/: Cargo.toml
contracts/purchaseable-snip721-v1/src/: contract.rs  contract_migrate.rs  lib.rs  msg.rs  state.rs  test_execute.rs  test_instantiate.rs  test_migrate.rs
contracts/purchaseable-snip721-v2/: Cargo.toml
contracts/purchaseable-snip721-v2/src/: contract.rs  msg.rs  state.rs  test_execute.rs  test_migrate.rs
contracts/snip721-dealer/: Cargo.toml
contracts/snip721-dealer/examples/: dealer-schema.rs
contracts/snip721-dealer/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/snip721-dealer/src/: contract.rs  contract_migrate.rs  lib.rs  msg.rs  msg_external.rs  msg_types.rs  msg_untagged_deserializer.rs  state.rs  test_execute.rs  test_instantiate.rs  test_migrate.rs  test_query.rs  test_utils.rs
contracts/snip721-migratable/: Cargo.toml
contracts/snip721-migratable/examples/: snip721-schema.rs
contracts/snip721-migratable/schema/: execute_msg.json  instantiate_msg.json  query_msg.json
contracts/snip721-migratable/src/: contract.rs  contract_migrate.rs  lib.rs  msg.rs  msg_untagged_deserializer.rs  state.rs  test_instantiate.rs  test_migrate.rs  test_query.rs  test_utils.rs
contracts/snip721-v1/: Cargo.toml
contracts/snip721-v1/src/: contract.rs  lib.rs  msg.rs  state.rs  test_execute.rs  test_instantiate.rs
deployed/snip721-dealer/v0.1.0/: Pulsar2.json
deployed/snip721-dealer/v0.1.1/: Pulsar3.json
deployed/snip721-dealer/v2.0.0/: Pulsar3.json
deployed/snip721-dealer/v3.0.1/: Custom.json  Pulsar3.json
deployed/snip721-migratable/v0.1.0/: Pulsar2.json
deployed/snip721-migratable/v0.1.1/: Pulsar3.json
deployed/snip721-migratable/v2.0.0/: Pulsar3.json
deployed/snip721-migratable/v3.0.1/: Custom.json  Pulsar3.json
deployment/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
deployment/deploy/: build.gradle.kts  deploy.default.properties
deployment/deploy/src/jvmMain/kotlin/io/eqoty/dapp/secret/: main.kt
deployment/gradle/: libs.versions.toml
deployment/integration-tests/src/commonTest/kotlin/io/eqoty/dapp/secret/: IntegrationTests.kt  TestGlobals.kt
deployment/integration-tests/src/commonTest/kotlin/io/eqoty/dapp/secret/types/contract/: Snip721DealerMsgs.kt
deployment/integration-tests/src/commonTest/resources/config/: nodes.json
tests/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
tests/gradle/: libs.versions.toml
tests/src/commonTest/kotlin/io/eqoty/dapp/secret/: IntegrationTests.kt  TestGlobals.kt
tests/src/commonTest/kotlin/io/eqoty/dapp/secret/types/: ContractInfo.kt  ExecuteResult.kt  MintedRelease.kt
tests/src/commonTest/kotlin/io/eqoty/dapp/secret/types/contract/: BatchNftDossierExtensions.kt  CountResponse.kt  MigrationMsg.kt  PurchasableSnip721Msgs.kt  Snip721DealerMsgs.kt  Snip721MigratableMsg.kt
tests/src/commonTest/kotlin/io/eqoty/dapp/secret/types/contract/migratable/: MigratableContractMsg.kt  MigratableContractTypes.kt
tests/src/commonTest/kotlin/io/eqoty/dapp/secret/utils/: Constants.kt  Faucet.kt  TestnetInfo.kt  getEnv.kt
tests/src/commonTest/resources/config/: nodes.json  testnets.json
tests/src/jvmTest/kotlin/io/eqoty/dapp/secret/utils/: getEnv.kt
tests/src/nativeTest/kotlin/io/eqoty/dapp/secret/utils/: fileSystem.kt  getEnv.kt
