[workspace]
members = ["contracts/*"]
resolver = "2"


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11", default-features = false }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11", default-features = false }
schemars = "0.8.15"
snip721-reference-impl = { git = "https://github.com/eqoty-labs/snip721-reference-impl", branch = "post-init-data-as-library" }
secret-toolkit = { version = "0.10.0", default-features = false, features = [] }
cw-migratable-contract-std = { version = "12.0.0" }
serde = { version = "1.0.190", default-features = false, features = ["derive"] }
