[package]
name = "purchaseable-snip721-v1"
version = "0.1.0"
authors = ["Luca Spinazzola"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]
schema = ["cosmwasm-schema"]

[dependencies]
snip721-reference-impl = { git = "https://github.com/eqoty-labs/snip721-reference-impl", branch = "as-library" }
serde-cw-value = { version = "0.7.0" }
serde = { version = "1.0.158", default-features = false, features = ["derive"] }
schemars = "0.8.12"
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }

# Used only for schema generation
cosmwasm-schema = { version = "1.1.0", optional = true }

# Uncomment these for some common extra tools
# secret-toolkit = "0.7.0"
# cw-storage-plus = { version = "0.14.0", default-features = false }

[[bin]]
name = "schema"
required-features = ["schema"]
