[package]
name = "snip721-dealer"
version = "0.1.0"
authors = ["Luca Spinazzola"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
snip721-reference-impl = { git = "https://github.com/eqoty-labs/snip721-reference-impl", rev = "d42106f" }
cosmwasm-contract-migratable-std = { git = "https://github.com/eqoty-labs/cosmwasm-contract-migratable-std", tag = "v1.0.0" }
serde-cw-value = { version = "0.7.0" }
serde = { version = "1.0.154", default-features = false, features = ["derive"] }
schemars = "0.8.12"
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", tag = "v0.8.0", default-features = false, features = ["crypto"] }

[dev-dependencies]
cosmwasm-schema = { version = "1.2.1"}
strum = { version = "0.24.1", features = ["derive"] }
