[package]
name = "snip721-dealer"
version = "1.0.0"
authors = ["Luca Spinazzola"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
snip721-reference-impl = { workspace = true }
cw-migratable-contract-std = { workspace = true }
serde = { workspace = true }
serde-cw-value = { workspace = true }
schemars = { workspace = true }
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
secret-toolkit = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { version = "1.2.6"}
