[package]
name = "snip721-migratable"
version = "0.1.0"
authors = ["Luca Spinazzola"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]
schema = ["cosmwasm-schema"]

[dependencies]
migration = { path = "../../packages/migration", default-features = false }
snip721-reference-impl = { git = "https://github.com/eqoty-labs/snip721-reference-impl", branch = "as-library" }
serde-cw-value = { version = "0.7.0" }
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
schemars = "0.8.11"
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.0.0", default-features = false }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.0.0" }
secret-toolkit = { version = "0.7.0", default-features = false, features = ["viewing-key", "crypto"] }

# Used only for schema generation
cosmwasm-schema = { version = "1.1.0", optional = true }

[[bin]]
name = "schema"
required-features = ["schema"]
